--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -24,6 +24,7 @@
                         Date:<%= journalEntries[i].date %>
                         Stress Rate:<%= journalEntries[i].stressLevel %>
                         DailyPost:<%= journalEntries[i].dailyPost %>
+                        User:<%= journalEntries[i].email %>
                 
   
               </li>
