--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,33 +11,59 @@
   <script src="https://kit.fontawesome.com/fec081edb2.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/index.css">
+  <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
   <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
   <header>
-    <h1>Post Partum Direction</h1>
-    <nav>
-  <a href="/profile">Profile</a>
-  <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-  </nav>
+      <section class="h1Logo">
+      <!-- <img class="logo" src="/img/arrowLogo.gif"> -->
+      <h1>Post Partum Direction</h1>
+      <!-- <img class="logo" src="/img/arrowLogo.gif"> -->
+    </section>
+      <nav>
+        <ul>
+          <a href="/whoWeAre"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Who We Are</i></li></a>
+          <a href="/profile"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Profile</i></li></a>
+          <a href="/signup"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Sign Up</i></li></a>
+          <a href="/login"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log In</i></li></a>
+          <a href="/logout"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log Out</i></li></a>
+          <li><i class="fa fa-leaf fa" aria-hidden="true">Events</i></li>
+          <li><i class="fa fa-leaf fa" aria-hidden="true">News</i></li>    
+      </ul>
+    </nav>
+  </header>
   
   <section class="ladySmiling">
 
-    <section class="words">Ellen Pallen wants to build a more inclusive Silcon Valley</section>
   </section>
-  <nav>
-  <section class="bottomBox">
-   
-    <section class="img">
-    <img class="ad" src="images/">
-  </section>
+    
+    <section class="bio">
+      <section class="words">
+        <h2>We Rise By Lifting Others</h2>
+      </section>
+      
+      <section class="first-TopPic">
+        <img class="talkingGirlsGif" src="/img/index.gif">
+     </section>
+     <p>
+      " Kindness is a gift everyone can afford to give."
+     </p>
+    
+</section>
 
-   <h4 class="title">From Vampire Slayer to Entrepreneur: Buffy Rings the Nasdaq Bell </h4>
-      <span class="leftSpan">BERNICE MAG</span>
-      <span class="rightSpan">January 11 2017 5:26pm</span>
-</section>   
-</body>
-</html>   
+   <section class="bottomBox">
+    
+     <section class="img">
+     <img class="ad" src="images/ad.jpg">
+   </section>
+ 
+    <h4 class="title">Post Partum Direction Copyright ©2022 </h4>
+       <span class="rightSpan">Carla Hores</span>
+         
+ </section>   
+ </body>
+ </html>   
 
 
 <script src="main.js"></script>
