--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,155 +1,173 @@
 <!doctype html>
 <html>
+
 <head>
-    <title>User Profile</title>
-   
-    <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
+  <title>User Profile</title>
+
+  <!-- <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> -->
-    <link rel="stylesheet" href="style/profile.css">
-    <link rel="stylesheet" href="css/profile.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style/profile.css">
+  <link rel="stylesheet" href="css/profile.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap"
+    rel="stylesheet">
 
 
 </head>
+
 <body id="profileLanding">
-<div class="containerLanding">
-    <i class="fa-solid fa-person-breastfeeding"></i>
-    <div class="page-header text-center">
-        <h1><span> <i class="fa-solid fa-person-breastfeeding"></i></span> Profile Page</h1>
-        <a href="/logout" class="btn btn-default btn-sm">Logout</a>
-        <a href="/viewers" class="btn btn-default btn-sm">Home</a>
-        <a href="/profile" class="btn btn-default btn-sm">Profile</a>
-        <a href="/relationship" class="btn btn-default btn-sm">Add Viewers</a>
-        <a href="/chart" class="btn btn-default btn-sm">View charts</a>
-        <a href="/feed" class="btn btn-default btn-sm">View feed</a>
+  <div class="containerLanding">
+    <header>
+      <h1><span> <i class="fa-solid fa-person-breastfeeding"></i></span> Profile Page</h1>
+      <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+      <a href="/viewers" class="btn btn-default btn-sm">Home</a>
+      <a href="/profile" class="btn btn-default btn-sm">Profile</a>
+      <a href="/relationship" class="btn btn-default btn-sm">Add Viewers</a>
+      <a href="/chart" class="btn btn-default btn-sm">View charts</a>
+      <a href="/feed" class="btn btn-default btn-sm">View feed</a>
+      <h1><span> <i class="fa-solid fa-person-breastfeeding"></i></span> Welcome</h1>
+      <nav>
+        <ul>
 
+        </ul>
+      </nav>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </div>
+    </header>
+    <main>
 
     <div class="row">
-<!-- LOCAL INFORMATION -->
-<div class="col-sm-6">
-    <div class="well">
-        <h3><span class="fa fa-user"></span> Local</h3>
-
-        <% if (user.local.email) { %>
-            <p>
-                <strong>First Name</strong>: <%= user.local.firstName %><br>
-                <strong>Last Name</strong>: <%= user.local.lastName %><br>
-            </p>
-
-            <a href="/unlink/local" class="btn btn-default">Unlink</a>
-        <% } else { %>
-            <a href="/connect/local" class="btn btn-default">Connect Local</a>
-        <% } %>
-
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <h3>Mood Logs</h3>
-      <ul class="messages">
-      <% for(var i=0; i<journalEntries.length; i++) {%>
-        <li class="message">
-          <a href="/journalEntries/<%= journalEntries[i]._id %>">
-            <h4> Date: <%= journalEntries[i].date %></h4>
-          </a> 
-            <span><i class="fa fa-star"></i></span> 
-            <span><i class="fa fa-trash"></i></span> 
-          </a>  
-        </li>
-      <% } %>
-      </ul>
-    
-      <h2> Mood Logger</h2>
-    <% if (user.local.email) { %>
-      <form action="/log"  method="POST">
+      <!-- LOCAL INFORMATION -->
+      <div class="col-sm-6">
+        <div class="well">
+          <h3><span class="fa fa-user"></span> Local</h3>
   
-        <h2>Write your thoughts here</h2>
-                        <input type="date" placeholder="date" name="date" class="inputMan" required pattern="\d{4}-\d{2}-\d{2}">
-                        <input value="<%= user.local.email %>" type="email" placeholder="email" name="email" hidden>
+          <% if (user.local.email) { %>
+          <p>
+            <strong>First Name</strong>: <%= user.local.firstName %><br>
+            <strong>Last Name</strong>: <%= user.local.lastName %><br>
+          </p>
+  
+          <a href="/unlink/local" class="btn btn-default">Unlink</a>
+          <% } else { %>
+          <a href="/connect/local" class="btn btn-default">Connect Local</a>
+          <% } %>
+  
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <h3>Mood Logs</h3>
+        <ul class="messages">
+          <% for(var i=0; i<journalEntries.length; i++) {%>
+          <li class="message">
+            <a href="/journalEntries/<%= journalEntries[i]._id %>">
+              <h4> Date: <%= journalEntries[i].date %></h4>
+            </a>
+            <span><i class="fa fa-star"></i></span>
+            <span><i class="fa fa-trash"></i></span>
+            </a>
+          </li>
+          <% } %>
+        </ul>
+  
+        <h2> Mood Logger</h2>
+        <% if (user.local.email) { %>
+        <form action="/log" method="POST">
+  
+          <h2>Write your thoughts here</h2>
+          <input type="date" placeholder="date" name="date" class="inputMan" required pattern="\d{4}-\d{2}-\d{2}">
+          <input value="<%= user.local.email %>" type="email" placeholder="email" name="email" hidden>
+  
+          <div id="msg">
+            <textarea name="dailyPost" id="dailyPost" cols="100" rows="10"></textarea>
+          </div>
+          <fieldset class="pinkBack">
+            <legend>Current Emotion?</legend>
+            <label for="Happy">Happy</label>
+            <input required type="radio" name="emotion" id="tall" value="happy">
+  
+            <label for="grande">Sad</label>
+            <input type="radio" name="emotion" id="sad" value="sad">
+  
+            <label for="venti">Angry</label>
+            <input type="radio" name="emotion" id="angry" value="angry">
+  
+            <label for="venti">Anxious</label>
+            <input type="radio" name="emotion" id="anxious" value="anxious">
+  
+          </fieldset>
+  
+          <fieldset class="pinkBack">
+            <legend>Stress Levels?</legend>
+  
+            <label for="cars">What is your stress level today?
+              1 being the lowest and 5 being the highest.:</label>
+  
+            <select id="levels" name="stressLevel">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+          </fieldset>
+  
+          <fieldset class="pinkBack">
+            <legend>Harmful Thoughts?</legend>
+  
+            <label>
+              Yes
+              <input required type="radio" name="harmful" value="Yes"></label>
+            <label>
+              No
+              <input type="radio" name="harmful" value="No"></label>
+  
+          </fieldset>
+  
+          <fieldset class="pinkBack-1">
+            <legend>How Can You Be supported?</legend>
+  
+            <fieldset class="pinkBack">
+              <legend> Note:</legend>
+  
+              <textarea name="note" placeholder="Note" cols="20" rows="5"></textarea>
+            </fieldset>
+            <label for="submit">
+              <button type="submit">Share My Thoughts</button>
+            </label>
+        </form>
+      </div>
 
-                            <div id="msg">
-                            <textarea name="dailyPost" id="dailyPost"cols="100" rows="10" ></textarea>
-                            </div>
-                            <fieldset>
-                                <legend>Current Emotion?</legend>
-                                <label for="Happy">Happy</label>
-                                <input required type="radio" name="emotion" id="tall" value="happy">
-    
-                                <label for="grande">Sad</label>
-                                <input type="radio" name="emotion" id="sad" value="sad">
-    
-                                <label for="venti">Angry</label>
-                                <input type="radio" name="emotion" id="angry" value="angry">
-    
-                                <label for="venti">Anxious</label>
-                                <input type="radio" name="emotion" id="anxious" value="anxious">
-    
-                            </fieldset>
-    
-                            <fieldset>
-                                <legend>Stress Levels?</legend>
 
-                                <label for="cars">What is your stress level today? 
-                                    1 being the lowest and 5 being the highest.:</label>
-                                    
-                                    <select id="levels" name="stressLevel">
-                                      <option value="1">1</option>
-                                      <option value="2">2</option>
-                                      <option value="3">3</option>
-                                      <option value="4">4</option>
-                                      <option value="5">5</option>
-                                    </select>
-                            </fieldset>
-    
-                            <fieldset>
-                                <legend>Harmful Thoughts?</legend>
-    
-                                <label>
-                                    Yes
-                                    <input required type="radio" name="harmful" value="Yes"></label>
-                                <label>
-                                    No
-                                    <input type="radio" name="harmful" value="No"></label>
-    
-                            </fieldset>
-    
-                            <fieldset>
-                                <legend>How Can You Be supported?</legend>
-                                
-                            <fieldset>
-                                <legend> Note:</legend>
-    
-                                <textarea name="note" placeholder="Note" cols="20" rows="5"></textarea>
-                            </fieldset>
-                            <label for="submit">
-                                <button type="submit">Share My Thoughts</button>
-                            </label>
-      </form>
-    </div>
-    <% } %>
-        <!-- LOCAL INFORMATION -->
-       
-                
+      
+      <section class="addToDoList">
+        <form action="/toDoListAdd" method="post">
+          <h2>Remind</h2>
+          <div id="msg">
+            <textarea name="chore" id="addToList" cols="100" rows="10"></textarea>
+          </div>
+          <label for="submit">
+            <button type="submit">send</button>
+          </label>
+          <input type="date" placeholder="date" name="date" class="inputMan" required pattern="\d{4}-\d{2}-\d{2}">
+        </form>
+      <% } %>
+      </section>
+    </main>
+    <footer>
 
-<script src="main.js"></script>
+    </footer>
+
+
+
+    <!-- LOCAL INFORMATION -->
+
+
+
+    <script src="main.js"></script>
 
 </body>
+
 </html>
