--- a/views/whoWeAre.ejs
+++ b/views/whoWeAre.ejs
@@ -16,6 +16,11 @@
       <title>WhoWeAre</title>
       <script src="https://kit.fontawesome.com/fec081edb2.js" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="css/WhoWeAre.css">
+      <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Fruktur&family=Rubik+Glitch&display=swap" rel="stylesheet">
+
+      <link rel="stylesheet" href="style/profile.css">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <!-- <link rel="stylesheet" href="style.css"> -->
     </head>
     <body>
@@ -36,6 +41,8 @@
             <a href="/signup"> <li> <i class="fa fa-leaf fa" aria-hidden="true">Sign Up</i></li></a>
             <a href="/login"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log In</i></li></a>
             <a href="/logout"> <li><i class="fa fa-leaf fa" aria-hidden="true">Log Out</i></li></a>
+            <a href="/"> <li><i class="fa fa-leaf fa" aria-hidden="true"> Home</i></li></a>
+
             <li><i class="fa fa-leaf fa" aria-hidden="true">Events</i></li>
             <li><i class="fa fa-leaf fa" aria-hidden="true">News</i></li>
           </ul>
